docs/generated/2.11.0-b7/Namespaces.md
Namespaces
==========

This is a complete list of available namespaces:

- [``]()
- [`Piwik`](Piwik)
- [`Piwik\API`](Piwik/API)
- [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
- [`Piwik\Columns`](Piwik/Columns)
- [`Piwik\DataAccess`](Piwik/DataAccess)
- [`Piwik\DataTable`](Piwik/DataTable)
- [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`Piwik\Intl`](Piwik/Intl)
- [`Piwik\Intl\Data`](Piwik/Intl/Data)
- [`Piwik\Intl\Data\Provider`](Piwik/Intl/Data/Provider)
- [`Piwik\Menu`](Piwik/Menu)
- [`Piwik\Metrics`](Piwik/Metrics)
- [`Piwik\Notification`](Piwik/Notification)
- [`Piwik\Period`](Piwik/Period)
- [`Piwik\Plugin`](Piwik/Plugin)
- [`Piwik\Plugin\Dimension`](Piwik/Plugin/Dimension)
- [`Piwik\Plugins`](Piwik/Plugins)
- [`Piwik\Plugins\CoreHome`](Piwik/Plugins/CoreHome)
- [`Piwik\Plugins\CoreHome\Columns`](Piwik/Plugins/CoreHome/Columns)
- [`Piwik\Plugins\CoreHome\Columns\Metrics`](Piwik/Plugins/CoreHome/Columns/Metrics)
- [`Piwik\Plugins\Installation`](Piwik/Plugins/Installation)
- [`Piwik\Plugins\Login`](Piwik/Plugins/Login)
- [`Piwik\Plugins\UsersManager`](Piwik/Plugins/UsersManager)
- [`Piwik\Scheduler`](Piwik/Scheduler)
- [`Piwik\Scheduler\Schedule`](Piwik/Scheduler/Schedule)
- [`Piwik\Settings`](Piwik/Settings)
- [`Piwik\Settings\Storage`](Piwik/Settings/Storage)
- [`Piwik\Translation`](Piwik/Translation)
- [`Piwik\View`](Piwik/View)
- [`Piwik\ViewDataTable`](Piwik/ViewDataTable)
